--- a/now.json
+++ b/now.json
@@ -1,6 +1,9 @@
 {
     "version": 2,
     "builds": [
-        { "src": "./*", "use": "@now/static" }
+        { "src": "index.html", "use": "@now/static" }
+    ],
+    "routes": [
+        { "src": "css/style.js", "dest": "css/style.js" },
     ]
 }
