--- a/now.json
+++ b/now.json
@@ -2,8 +2,6 @@
     "version": 2,
     "builds": [
         { "src": "index.html", "use": "@now/static" }
-    ],
-    "routes": [
-        { "src": "css/style.css", "dest": "css/style.css" }
+        { "src": "css/*.css", "use": "@now/static" }
     ]
 }
