--- a/now.json
+++ b/now.json
@@ -1,7 +1,7 @@
 {
     "version": 2,
     "builds": [
-        { "src": "index.html", "use": "@now/static" }
+        { "src": "index.html", "use": "@now/static" },
         { "src": "css/*.css", "use": "@now/static" }
     ]
 }
