--- a/now.json
+++ b/now.json
@@ -2,6 +2,7 @@
     "version": 2,
     "builds": [
         { "src": "index.html", "use": "@now/static" },
-        { "src": "css/*.css", "use": "@now/static" }
+        { "src": "css/*.css", "use": "@now/static" },
+        { "src": "assets/**", "use": "@now/static" }
     ]
 }
